# mcp-pipeline

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md
mcp-server/: .gitignore  pyproject.toml
mcp-server/src/: main.py  storage.py
mcp-server/src/core/: __init__.py  json_storage.py  next_action_base.py  workflow.py
mcp-server/src/core/models/: __init__.py  next_action_response.py  utils.py  workflow_item.py
mcp-server/src/tools/: __init__.py  pipelines.py  status.py  tasks.py
mcp-server/tests/: conftest.py  test_pipelines.py  test_status.py  test_tasks.py
